[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["Evgenii Ermak <djermak3000@mail.ru>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"
protected = "^0.0.1"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"
accessify = "^0.3.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
